added/customized cta and footer section

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,6 @@ p{
 
 .navbar{
     padding: 0 0 4.5rem;
-    display: flex;
-    justify-content: space-around;
 }
 
 .nav-item{
@@ -130,4 +128,26 @@ p{
     .title-image{
         position: static;
     }
+}
+
+#cta{
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.cta-heading{
+    font: "Montserrat-Black";
+    font-size: 3.2rem;
+    line-height: 1.5;
+}
+
+#footer{
+    padding: 3% 15%;
+    text-align: center;
+}
+
+.social-icon{
+    margin: 20px 10px;
 }
