--- a/css/styles.css
+++ b/css/styles.css
@@ -7,29 +7,24 @@ body{
     color: #fff;
 }
 
-h1{
+.big-heading{
     font-family: "Montserrat";
     font-size: 3rem;
     line-height: 1.5;
 }
 
-h2{
+h2, h3{
     font-family: "Montserrat";
+}
+
+h3{
+    font-weight: 600;
 }
 
 h4{
     font-family: "Montserrat-light";
     font-size: 1rem;
     line-height: 1;
-}
-
-h3{
-    font-family: "Montserrat";
-    font-weight: 600;
-}
-
-p{
-    color: grey;
 }
 
 .container-fluid{
